tp4/step1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: my-namespace
spec:
  containers:
    - name: api
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 80
